--- a/apps/default/src/index.html
+++ b/apps/default/src/index.html
@@ -8,6 +8,6 @@
     <link rel="icon" type="image/x-icon" href="favicon.ico" />
   </head>
   <body>
-    <change-detection-strategy-examples-root></change-detection-strategy-examples-root>
+    <app-root></app-root>
   </body>
 </html>
